[package]
name = "sensor-pollster"
description = "Monitor temperature from HM-11 sensors"
version = "0.1.1"
authors = ["Shuhao <johnmave126@gmail.com.>"]
edition = "2018"
exclude = [
    ".github/**",
    ".gitignore",
]
license = "MIT OR Apache-2.0"
keywords  = ["bluetooth", "ble"]

[dependencies]
btleplug = "0.7.1"
thiserror = "1.0.24"
ctrlc = { version = "3.1.8", features = ["termination"] }
serde = "1.0.124"
serde_yaml = "0.8.17"
tokio = { version = "1.3.0", features = ["sync", "time", "macros", "rt", "rt-multi-thread"] }
tokio-postgres = { version = "0.7.0", features = ["with-chrono-0_4", "with-eui48-0_4"] }
clap = "2.33.3"
indoc = "1.0.3"
log = "0.4.14"
env_logger = "0.8.3"
anyhow = "1.0.38"
serde_with = "1.6.4"
futures = "0.3.13"
chrono = "0.4.19"
eui48 = "0.4.6"
uuid = "0.8.0"
rand = "0.8.3"
tokio-stream = "0.1.4"
async-stream = "0.3.0"
