[package]
name = "sensor-pollster"
description = "Monitor temperature from HM-11 sensors"
version = "0.2.0"
authors = ["Shuhao <johnmave126@gmail.com.>"]
edition = "2018"
exclude = [
    ".github/**",
    ".gitignore",
]
license = "MIT OR Apache-2.0"
keywords  = ["bluetooth", "ble"]

[dependencies]
btleplug = "0.7.2"
thiserror = "1.0.24"
ctrlc = { version = "3.1.8", features = ["termination"] }
serde = "1.0.125"
serde_yaml = "0.8.17"
tokio = { version = "1.4.0", features = ["fs", "io-util", "sync", "time", "macros", "rt", "rt-multi-thread"] }
tokio-postgres = { version = "0.7.1", features = ["with-chrono-0_4", "with-eui48-0_4"] }
clap = "2.33.3"
indoc = "1.0.3"
log = "0.4.14"
env_logger = "0.8.3"
anyhow = "1.0.40"
futures = "0.3.13"
chrono = "0.4.19"
eui48 = "0.4"
uuid = "0.8.2"
rand = "0.8.3"
async-trait = "0.1.48"
humantime-serde = "1.0.1"
